# g3w-admin-processing

./: .gitignore  Makefile  README.md  _version.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
qprocessing/: __init__.py  admin.py  apiurls.py  apps.py  configs.py  forms.py  models.py  receivers.py  sitetrees.py  tasks.py  urls.py  views.py
qprocessing/api/: permissions.py  views.py
qprocessing/api/views/: __init__.py  actions.py  admin.py  models.py  upload.py
qprocessing/migrations/: 0001_initial.py  0002_auto_20230615_1609.py  0003_qprocessinginputupload.py  0004_auto_20230809_0920.py  0005_alter_qprocessinginputupload_user.py
qprocessing/static/qprocessing/js/: plugin.js
qprocessing/templates/qprocessing/: project_form.html  projects_list.html
qprocessing/tests/: base.py  test_algorithm.py  test_api.py  test_api_models.py
qprocessing/tests/data/: buildings.geojson  buildings.qmd  qprocessing_qprocessing.qgs  test.model3  test_qgis_328.qgs
qprocessing/tests/data/models/: qbuffer.model3  qintersection.model3  qpointspolygons.model3  test_buffer_all_inputs.model3  test_buffer_layer1.model3
qprocessing/tests/data/processing_result/: out.dbf  out.shp  out.shx
qprocessing/tests/data/project_data/: qprocessing.gpkg
qprocessing/tests/data/upload/: linestring_to_upload.geojson  point_to_upload.geojson  point_to_upload_espg4326.geojson  point_to_upload_espg4326.qmd  polygon_to_upload.geojson  shp_to_upload.dbf  shp_to_upload.qix  shp_to_upload.shp  shp_to_upload.shx
qprocessing/utils/: data.py  exceptions.py  formtypes.py
